--- a/Mastr/V7.xml.erb
+++ b/Mastr/V7.xml.erb
@@ -4,7 +4,7 @@
     <p>Find a basis for the subspace <me>W=\mathrm{span}\ \left\{<%= vlist %>\right\}.</me> Be sure to explain why your result is a basis.</p>
   </statement>
   <answer>
-  <p> A basis of <m>W</m< is  <m>\left\{<%= basis %>\right\}</m>.
+  <p> A basis of <m>W</m> is  <m>\left\{<%= basis %>\right\}</m>.
   </p>
   </answer>
 </exercise>
