--- a/Mastr/V2.xml.erb
+++ b/Mastr/V2.xml.erb
@@ -1,20 +1,16 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain why the vector <m><%= v4 %></m> is or is not a linear 
-	combination of the vectors 
-	<m><%= v1 %></m>,
-	<m><%= v2 %></m>, and
-	<m><%= v3 %></m>.
+    <p>Explain why the vector <m><%= combovector %></m>  is or is not a linear 
+	combination of the vectors <m><%=veclist%></m>.
 	</p>
   </statement>
   <answer>
-  <p> <m><%= v4 %></m> 
+  <p> <m><%= combovector %></m> 
   	<% if lc  %> is <% else %> is not <% end %> 
-	a linear combination of the vectors 
-	<m><%= v1 %></m>,
-	<m><%= v2 %></m>, and
-	<m><%= v3 %></m>.
+	a linear combination of the vectors <m><%=veclist%></m>.
+
+	
   </p>
   </answer>
 </exercise>
