--- a/exercises/mastr/V10.xml.erb
+++ b/exercises/mastr/V10.xml.erb
@@ -1,7 +1,7 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Find a basis for the solution space of the homogeneous system <%=system%></p> 
+    <p>Explain how to find a basis for the solution space of the homogeneous system <%=system%></p> 
   </statement>
 
   <answer>
