--- a/exercises/mastr/V01.xml.erb
+++ b/exercises/mastr/V01.xml.erb
@@ -7,7 +7,7 @@
 	</p>
   </statement>
   <answer>
-  <p> <m>V</m> is not a vector space because <%= falseproperty %>
+  <p> <m>V</m> is not a vector space because the following properties do not hold: <%= falseproperties %>
 	
   </p>
   </answer>
