Tweak V1 Mastr prompt

--- a/exercises/mastr/V01.xml.erb
+++ b/exercises/mastr/V01.xml.erb
@@ -1,10 +1,9 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Let <m>V</m> be <%= set %>  together with the operations <md><mrow><%=oplus%></mrow><mrow><%=otimes%></mrow></md>
-	Show that <%=trueproperty%>
-	Show that <m>V</m> nonetheless is not a vector space.
-	</p>
+    <p>Let <m>V</m> be <%= set %>  together with the operations <md><mrow><%=oplus%></mrow><mrow><%=otimes%></mrow></md></p>
+	<p>(a) Show that <%=trueproperty%></p>
+	<p>(b) Show that <m>V</m> nonetheless is not a vector space.</p>
   </statement>
   <answer>
   <p> <m>V</m> is not a vector space because the following properties do not hold: <%= falseproperties %>
