--- a/exercises/mastr/V04.xml.erb
+++ b/exercises/mastr/V04.xml.erb
@@ -1,14 +1,19 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-	<p>Consider the following two sets of Euclidean vectors:
-	<me><%=vsets[0]%> \phantom{mmm} <%=vsets[1]%>.</me>
-	Explain why one of these sets is a subspace of <m><%=vectorspace%></m>, 
+	<p>Consider the following two sets of Euclidean vectors:</p>
+	<me>U=<%=vsets[0]%> \hspace{2em} W=<%=vsets[1]%>.</me>
+	<p>Explain why one of these sets is a subspace of <m><%=vectorspace%></m>, 
 	and why the other is not.</p>
   <answer>
   <p> 
-  	<m><%=subspace%></m> is a subspace of <m><%=vectorspace%></m> and 
-	<m><%=notsubspace%></m> is not.
+    <% if swapped %>
+  	<m>W</m> is a subspace of <m><%=vectorspace%></m> and 
+	<m>U</m> is not.
+    <% else %>
+  	<m>U</m> is a subspace of <m><%=vectorspace%></m> and 
+	<m>W</m> is not.
+    <% end %>
   </p>
   </answer>
 </exercise>
