M exercise fixes, closes #107

--- a/exercises/mastr/M2.xml.erb
+++ b/exercises/mastr/M2.xml.erb
@@ -2,7 +2,7 @@
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
     <p>
-      Explain why the following matrix is or is not intervible.
+      Explain why the following matrix is or is not invertible.
     </p>
     <me><%=matrix%></me>
   </statement>
