--- a/exercises/mastr/M3.xml.erb
+++ b/exercises/mastr/M3.xml.erb
@@ -4,10 +4,10 @@
     <p>
       Show how to compute the inverse of the following invertible matrix.
     </p>
-    <me><%=matrix%></me>
+    <me>A=<%=matrix%></me>
   </statement>
 
   <answer>
-    <me><%=inverse%></me>
+    <me>A^{-1}=<%=inverse%></me>
   </answer>
 </exercise>
