tweaks to G exercises, closes #108

--- a/exercises/mastr/G4.xml.erb
+++ b/exercises/mastr/G4.xml.erb
@@ -4,7 +4,7 @@
     <p>
       The following matrix has an eigenvalue of <%=eigenvalue%>.
       Explain how to find a basis for the eigenspace that corresponds
-      to this value.
+      to this eigenvalue.
     </p>
     <me><%=matrix%></me>
   </statement>
