--- a/exercises/mastr/G1.xml.erb
+++ b/exercises/mastr/G1.xml.erb
@@ -12,14 +12,22 @@
     <p>
       (c) Suppose <m>A</m> is a <m>3\times 3</m> matrix with determinant <m><%=orig_det%></m>.
       Use matrix multiplication to describe the matrix obtained by applying 
-      <m><%=row_op1%></m> and then <m><%=row_op2%></m> to <m>A</m>.
-      Then explain how to find its determinant.
+      <% if swapped %>
+        <m><%=row_op2%></m> and then <m><%=row_op1%></m>
+      <% else %>
+        <m><%=row_op1%></m> and then <m><%=row_op2%></m>
+      <% end %>
+      to <m>A</m> (note the order).
+    </p>
+    <p>
+      (d) Finally, explain how to find the determinant of the matrix described in (c).
     </p>
   </statement>
 
   <answer>
-    <p>(a) <m><%=mat1%></m></p>
-    <p>(b) <m><%=mat2%></m></p>
-    <p>(c) <m><%=new_det%></m></p>
+    <p>(a) <m>P=<%=mat1%></m></p>
+    <p>(b) <m>Q=<%=mat2%></m></p>
+    <p>(c) <m><% if swapped %>PQA<% else %>QPA<% end %></m></p>
+    <p>(d) <m><%=new_det%></m></p>
   </answer>
 </exercise>
