--- a/exercises/mastr/E1.xml.erb
+++ b/exercises/mastr/E1.xml.erb
@@ -1,10 +1,20 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Give an augmented matrix that represents <%=system%></p> 
+    <% if swapped %>
+      <p>Give an augmented matrix that represents the following system of linear equations.</p>
+      <%=system%>
+    <% else %>
+      <p>Give a linear system that is represented by the following matrix.</p>
+      <me><%=matrix%></me> 
+    <% end %>
   </statement>
 
   <answer>
+    <% if swapped %>
     <me><%= matrix %></me>
+    <% else %>
+    <%= system %>
+    <% end %>
   </answer>
 </exercise>
