Tweak Module V Mastr exercises, closes #105

--- a/exercises/mastr/V01.xml.erb
+++ b/exercises/mastr/V01.xml.erb
@@ -4,9 +4,9 @@
     <p>version <%=n%></p>
     <p>
       Let <m>V</m> be the set of all pairs <m>(x,y)</m> of real numbers
-      together with the following operations.
+      together with the following operations:
     </p>
-    <md><mrow><%=oplus%></mrow><mrow><%=otimes%></mrow></md>
+    <md><mrow><%=oplus%></mrow><mrow><%=otimes%>.</mrow></md>
     <p>
       (a) Show that <%=trueproperty%>, that is:
     </p>
