--- a/exercises/mastr/V05.xml.erb
+++ b/exercises/mastr/V05.xml.erb
@@ -1,10 +1,10 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain why the vectors <m><%= vlist %></m> are linearly dependent or linearly independent.	</p>
+    <p>Explain why the set of vectors <m>\left\{<%= vlist %>\right\}</m> is linearly dependent or linearly independent.	</p>
   </statement>
   <answer>
-  <p> The vectors <m><%= vlist %></m> are 
+  <p> The set <m>\left\{<%= vlist %>\right\}</m> is 
   	<% if independent  %> linearly independent <% else %> linearly dependent <% end %> .
   </p>
   </answer>
