--- a/exercises/mastr/V06.xml.erb
+++ b/exercises/mastr/V06.xml.erb
@@ -1,11 +1,11 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain why the vectors <m><%= vlist %></m> are or are not a basis of <m>\mathbb{R}^<%=dim%></m>	</p>
+    <p>Explain why the set of vectors <m>\left\{<%= vlist %>\right\}</m> is or is not a basis of <m>\mathbb{R}^<%=dim%></m>	</p>
   </statement>
   <answer>
-  <p> The vectors <m><%= vlist %></m> 
-  	<% if basis  %> are <% else %> are not <% end %> a basis of <m>\mathbb{R}^<%=dim%></m>.
+  <p> The set <m>\left\{<%= vlist %>\right\}</m> 
+  	<% if basis  %> is <% else %> is not <% end %> a basis of <m>\mathbb{R}^<%=dim%></m>.
   </p>
   </answer>
 </exercise>
