tweaks to sample solutions (and a couple corresopnding exercise generators)

--- a/exercises/mastr/A2.xml.erb
+++ b/exercises/mastr/A2.xml.erb
@@ -7,8 +7,10 @@
     </p>
     <me><%=transformation%></me>
     <p>
-      First give the standard matrix for <m>T</m>.
-      Then show how to evaluate <m><%=trans_of_v%></m>.
+      (a) Explain how to find the standard matrix for <m>T</m>.
+    </p>
+    <p>
+      (b) Explain how to evaluate <m><%=trans_of_v%></m>.
     </p>
   </statement>
 
@@ -25,6 +27,12 @@
     <p>
       First expand <m><%=transformation2%></m>.
       Then show how to evaluate <m><%=trans_of_v%></m>.
+    </p>
+    <p>
+      (a) Explain how to find an expression for <m><%=transformation2%></m>
+    </p>
+    <p>
+      (b) Explain how to evaluate <m><%=trans_of_v%></m>.
     </p>
   </statement>
 
