Add closing tag to mastr V04

--- a/exercises/mastr/V04.xml.erb
+++ b/exercises/mastr/V04.xml.erb
@@ -5,6 +5,7 @@
 	<me>U=<%=vsets[0]%> \hspace{2em} W=<%=vsets[1]%>.</me>
 	<p>Explain why one of these sets is a subspace of <m><%=vectorspace%></m>, 
 	and why the other is not.</p>
+  </statement>
   <answer>
   <p> 
     <% if swapped %>
