Punctuation fix V6 mastr

--- a/exercises/mastr/V06.xml.erb
+++ b/exercises/mastr/V06.xml.erb
@@ -1,7 +1,7 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain why the set of vectors <m>\left\{<%= vlist %>\right\}</m> is or is not a basis of <m>\mathbb{R}^<%=dim%></m>	</p>
+    <p>Explain why the set of vectors <m>\left\{<%= vlist %>\right\}</m> is or is not a basis of <m>\mathbb{R}^<%=dim%></m>.</p>
   </statement>
   <answer>
   <p> The set <m>\left\{<%= vlist %>\right\}</m> 
