--- a/exercises/mastr/A3.xml.erb
+++ b/exercises/mastr/A3.xml.erb
@@ -4,7 +4,7 @@
     <p>
       Let <m><%=domain_range%></m> be the transformation given by
     </p>
-    <me><%=transformation%></me>
+    <me><%=transformation%>.</me>
     <p>
       Show how to compute a basis for its image, and a basis for its kernel.
     </p>
