--- a/exercises/mastr/V02.xml.erb
+++ b/exercises/mastr/V02.xml.erb
@@ -2,7 +2,7 @@
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
     <p>Explain why the vector <m><%= combovector %></m>  is or is not a linear 
-	combination of the vectors <m><%=veclist%></m>.
+	combination of the vectors <me><%=veclist%>.</me>
 	</p>
   </statement>
   <answer>
