--- a/exercises/mastr/V03.xml.erb
+++ b/exercises/mastr/V03.xml.erb
@@ -1,13 +1,18 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain why the vectors <m><%= vlist %></m> span or don't span <m>\mathbb{R}^4</m>. 
-	</p>
+    <p>
+      Explain why the vectors in the set <me><%= vector_set %></me>
+      span or don't span
+      <m>\mathbb{R}^{<%=dimension%>}</m>. 
+    </p>
   </statement>
   <answer>
-  <p> The vectors <m><%= vlist %></m> 
-  	<% if spans  %> do <% else %> do not <% end %> 
-	span <m>\mathbb{R}^4</m>.
-  </p>
+    <me><%= matrix %>\sim<%= rref %></me>
+    <p>
+      The vectors
+      <% if set_spans  %> DO <% else %> do NOT <% end %> 
+      span <m>\mathbb{R}^{<%=dimension%>}</m>.
+    </p>
   </answer>
 </exercise>
