--- a/exercises/mastr/V07.xml.erb
+++ b/exercises/mastr/V07.xml.erb
@@ -1,10 +1,14 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Find a basis for the subspace <me>W=\mathrm{span}\ \left\{<%= vlist %>\right\}.</me> Be sure to explain why your result is a basis.</p>
+    <p>
+      Find a basis for the subspace
+      <me>W=\mathrm{span}<%= vector_set %>.</me>
+      Be sure to explain why your result is a basis.
+     </p>
   </statement>
   <answer>
-  <p> A basis of <m>W</m> is  <m>\left\{<%= basis %>\right\}</m>.
-  </p>
+    <me><%= matrix %>\sim<%= rref %></me>
+    <p> A basis of <m>W</m> is  <m><%= basis_set %></m>.</p>
   </answer>
 </exercise>
