--- a/exercises/mastr/V08.xml.erb
+++ b/exercises/mastr/V08.xml.erb
@@ -1,10 +1,15 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain how to find the dimension of <me>W=\mathrm{span}\ \left\{<%= vlist %>\right\}.</me></p>
+    <p>
+      Explain how to find the dimension of
+      <me>W=\mathrm{span}<%= vector_set %>.</me>
+    </p>
   </statement>
   <answer>
-  <p> The dimension of <m>W</m> is  <m><%= dim %></m>.
-  </p>
+    <me><%= matrix %>\sim<%= rref %></me>
+    <p>
+      The dimension of <m>W</m> is  <m><%= dimension %></m>.
+    </p>
   </answer>
 </exercise>
