--- a/exercises/mastr/V10.xml.erb
+++ b/exercises/mastr/V10.xml.erb
@@ -1,11 +1,15 @@
 <exercise>
   <title><%= _title %> (ver. <%= _seed %>)</title>
   <statement>
-    <p>Explain how to find a basis for the solution space of the homogeneous system <%=system%></p> 
+    <p>
+      Explain how to find a basis for the solution space of the homogeneous system
+      <md><%=system%></md>
+    </p> 
   </statement>
-
   <answer>
-  <p> A basis is   <me>\left\{<%= basis %>\right\}.</me>
-  </p>
+    <me><%= matrix %>\sim<%= rref %></me>
+    <p>
+      A basis is   <me><%= basis_set %>.</me>
+    </p>
   </answer>
 </exercise>
