limit V04 exercises to R2

--- a/exercises/mastr/V04.xml.erb
+++ b/exercises/mastr/V04.xml.erb
@@ -3,16 +3,16 @@
   <statement>
 	<p>Consider the following two sets of Euclidean vectors:</p>
 	<me>U=<%=vsets[0]%> \hspace{2em} W=<%=vsets[1]%>.</me>
-	<p>Explain why one of these sets is a subspace of <m><%=vectorspace%></m>, 
+	<p>Explain why one of these sets is a subspace of <m>\mathbb{R}^2</m>, 
 	and why the other is not.</p>
   </statement>
   <answer>
   <p> 
     <% if swapped %>
-  	<m>W</m> is a subspace of <m><%=vectorspace%></m> and 
+  	<m>W</m> is a subspace of <m>\mathbb{R}^2</m> and 
 	<m>U</m> is not.
     <% else %>
-  	<m>U</m> is a subspace of <m><%=vectorspace%></m> and 
+  	<m>U</m> is a subspace of <m>\mathbb{R}^2</m> and 
 	<m>W</m> is not.
     <% end %>
   </p>
